<resources>
    <string name="app_name">MyFamilyMap</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="mapFragmentMessage">This is my map fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hostIP_title">Host IP: </string>
    <string name="port_title">Port: </string>
    <string name="username_title">Username: </string>
    <string name="password_title">Password: </string>
    <string name="first_name_title">First Name: </string>
    <string name="last_name_title">Last Name: </string>
    <string name="email_title">Email: </string>
    <string name="gender_title">Gender: </string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="show_life_story_lines">SHOW LIFE STORY LINES</string>
    <string name="eventsTitle">Life Events</string>
    <string name="peopleTitle">Family</string>
    <string name="personSelected">Person selected: </string>
    <string name="eventSelected">Event selected: </string>
    <string name="options">Options</string>
    <string name="search">Search</string>
    <string name="defaultMapSubtext">Select a marker to view details</string>
    <string name="markerHidden2">Check settings or select another marker</string>
    <string name="markerHidden1">Selected marker is not visible due to filter settings</string>
    <string name="defaultMapWelcome">Welcome to MyFamilyMap</string>
    <string name="loginErrorMsg">Missing required field. Please ensure that all fields are properly completed.</string>
    <string name="ServerErrorMsg">Unable to contact server, please check connection and try again.</string>

</resources>