<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context="main.PersonActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/field1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/personFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:text="Suzanna" />

            <TextView
                android:id="@+id/personFieldFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/personFirstName"
                android:layout_below="@id/personFirstName"
                android:text="@string/first_name" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/personFieldFirstName"
                android:background="@android:color/darker_gray" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/field2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/field1">

            <TextView
                android:id="@+id/personLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:text="McCants" />

            <TextView
                android:id="@+id/personFieldLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/personLastName"
                android:layout_below="@id/personLastName"
                android:text="@string/last_name" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/personFieldLastName"
                android:background="@android:color/darker_gray" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/field3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/field2">

            <TextView
                android:id="@+id/personGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:text="Female" />

            <TextView
                android:id="@+id/personFieldGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/personGender"
                android:layout_below="@id/personGender"
                android:text="@string/gender" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/personFieldGender"
                android:background="@android:color/darker_gray" />

        </RelativeLayout>

        <ExpandableListView
            android:id="@+id/expandableListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="0.5sp"/>

    </LinearLayout>

</ScrollView>